<resources>
                                                                                                                                            <string name="OK">OK</string>
                                                                                                                                            <string name="PersoMy">PersoMy © eng. Massimo Manganiello</string>
                                                                                                                                            <string name="PersoMyHistory">PersoMy is a simple accounting program that allows you to keep track of all revenus and expenses of your family budget. You just need to track your expenses and earnings for a moment in the household budget, compiling statistics, get an overview of the current month and check the liquidity available.</string>
                                                                                                                                            <string name="PersoMyIcon">PersoMy</string>
                                                                                                                                            <string name="PersoMyVersion">Version: </string>
                                                                                                                                            <string name="PersoMy_app_version">PersoMy App Version Information</string>
                                                                                                                                            <string name="NO">No</string>
                                                                                                                                            <string name="SI">Yes</string>
                                                                                                                                            <string name="addDescrizione">Add New Item</string>
                                                                                                                                            <string name="addDescrizioneVolo">Add description</string>
                                                                                                                                            <string name="addDescrizione_descrizione">Create a new item in the user database (ex. hotel, coffee, etc.).</string>
                                                                                                                                            <string name="addSpesa">Add Voice</string>
                                                                                                                                            <string name="addSpesa_descrizione">Add selected item and amount to the content list.</string>
                                                                                                                                            <string name="aggiungiVoceGriglia">Add</string>
                                                                                                                                            <string name="allow">Allow the user access</string>
                                                                                                                                            <string name="application_error">Application error: %1$s</string>
                                                                                                                                            <string name="automaticaFrequenza">Frequency</string>
                                                                                                                                            <string name="backupGenericError">Generic Error: </string>
                                                                                                                                            <string name="backupGenericErrorFile">Generic Error on file: </string>
                                                                                                                                            <string name="backupNoFile">File not found.</string>
                                                                                                                                            <string name="backup_description">By clicking here you can create a backup or restore it.</string>
                                                                                                                                            <string name="choose_expense_description_spinner">Description of the expense or revenue</string>
                                                                                                                                            <string name="choose_frequency_label">Choose the frequency for the automatic operation</string>
                                                                                                                                            <string name="currency">€</string>
                                                                                                                                            <string name="deleteSpesa">Delete Expensive</string>
                                                                                                                                            <string name="deleteSpesa_descrizione">Delete the cheked item in the content list.</string>
                                                                                                                                            <string name="display_selected_date">Selected date of the entry</string>
                                                                                                                                            <string name="elimina_description">Here you can fully delete an item, but please be aware if you have no backup, you cannot revert back.</string>
                                                                                                                                            <string name="enter_password_description">Here you can put a password that you will confirm in the field below.</string>
                                                                                                                                            <string name="entrate_description">"By clicking here you can insert your revenues (income). "</string>
                                                                                                                                            <string name="euro_symbol">Symbol for Euro (€)</string>
                                                                                                                                            <string name="exit_description">Quit the app.</string>
                                                                                                                                            <string name="flag_checkbox">Select or deselect the item</string>
                                                                                                                                            <string name="importoAutomaticaDesc">By this checkpoint you can select expenses (outcoming) or revenues (incoming).</string>
                                                                                                                                            <string name="menu_elimina">Delete</string>
                                                                                                                                            <string name="menu_entrate">Revenues</string>
                                                                                                                                            <string name="menu_exit">Exit</string>
                                                                                                                                            <string name="menu_file_backup">Backup&amp;Restore</string>
                                                                                                                                            <string name="menu_modifica">Modify Item</string>
                                                                                                                                            <string name="menu_opzioni">Options</string>
                                                                                                                                            <string name="menu_operazioni_automatiche">Automatic Operations</string>
                                                                                                                                            <string name="menu_report">Reports</string>
                                                                                                                                            <string name="menu_salva">Save</string>
                                                                                                                                            <string name="menu_salva_descrizione">Save the content list in the user database.</string>
                                                                                                                                            <string name="menu_uscite">Expenses</string>
                                                                                                                                            <string name="modificaDescrizione_descrizione">Modify selected item (in: dropdown list, database and content list).</string>
                                                                                                                                            <string name="opzioni_description">Here you can set some options, like automatic update or set a password to access the app.</string>
                                                                                                                                            <string name="operazioni_automatiche_description">By clicking here you can configure your fixed incomes or outcomes. Examples: rent, loan, etc.</string>
                                                                                                                                            <string name="passwordVerifyDesc">Insert the password that you inserted before to confirm it.</string>
                                                                                                                                            <string name="report_description">By clicking here you can choice between different reports.</string>
                                                                                                                                            <string name="select_expenses">Select or deselect this expense</string>
                                                                                                                                            <string name="settings_password">Enter password:</string>
                                                                                                                                            <string name="settings_password2">Enter password again:</string>
                                                                                                                                            <string name="soldiSpesaDesc">Insert here the import (value) amount of your in/out coming.</string>
                                                                                                                                            <string name="uscite_description">By clicking here you can insert your expenses (outcome).</string>
</resources>