<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contentPane"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">

    <TableRow
        android:id="@+id/widget33"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <Button
            android:id="@+id/usciteBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/uscite_description"
            android:drawableTop="@drawable/uscite"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/menu_uscite"
            android:textSize="14sp" />

        <Button
            android:id="@+id/entrateBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/entrate_description"
            android:drawableTop="@drawable/entrate"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/menu_entrate"
            android:textSize="14sp" />

    </TableRow>

    <TableRow
        android:id="@+id/widget133"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/reportBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/report_description"
            android:drawableTop="@drawable/report"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/menu_report"
            android:textSize="14sp" />

        <Button
            android:id="@+id/automaticheBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/operazioni_automatiche_description"
            android:drawableTop="@drawable/operazioniautomatiche"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/menu_operazioni_automatiche"
            android:textSize="14sp" />

    </TableRow>

    <TableRow
        android:id="@+id/widget136"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/backupBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/backup_description"
            android:drawableTop="@drawable/backup"
            android:gravity="center"
            android:onClick="onBackupBtnPress"
            android:padding="4dp"
            android:text="@string/menu_file_backup"
            android:textSize="14sp" />

        <Button
            android:id="@+id/optionsBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/opzioni_description"
            android:drawableTop="@drawable/opzioni"
            android:gravity="center"
            android:onClick="onOptionsBtnPress"
            android:padding="4dp"
            android:text="@string/menu_opzioni"
            android:textSize="14sp" />

    </TableRow>

    <TableRow
        android:id="@+id/widget137"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/eliminaBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/elimina_description"
            android:drawableTop="@drawable/deleteform"
            android:gravity="center"
            android:onClick="onEliminaBtnPress"
            android:padding="4dp"
            android:text="@string/menu_elimina"
            android:textSize="14sp" />

        <Button
            android:id="@+id/exitBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/exit_description"
            android:drawableTop="@drawable/exit"
            android:gravity="center"
            android:onClick="onExitBtnPress"
            android:padding="4dp"
            android:text="@string/menu_exit"
            android:textSize="14sp" />

    </TableRow>

</TableLayout>
