<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget145"
	android:paddingTop="7dp"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">
	
	<TableRow 
		android:id="@+id/widget001"
		android:paddingTop="7dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:orientation="horizontal">
	    
	    <ImageButton
	        android:id="@+id/menu_salva_spese"
	        android:layout_height="30dp"
	        android:layout_width="30dp"
			android:layout_marginLeft="10dp"
			android:text="@string/menu_salva" 
			android:focusable="false"
			android:focusableInTouchMode="false"
			android:contentDescription="@string/menu_salva"
			android:background="@android:drawable/ic_menu_save"/>
	    <TextView
	        android:id="@+id/menu_salva_descrizione"
			android:layout_marginLeft="15dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/menu_salva_descrizione" 
			android:textStyle="bold"
			android:focusable="false"
			android:focusableInTouchMode="false"
			/>
	</TableRow>
	
	<TableRow 
		android:id="@+id/widget002"
		android:paddingTop="7dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:orientation="horizontal">
	    
	    <ImageButton
	        android:id="@+id/addDescrizione"
	        android:layout_height="30dp"
	        android:layout_width="30dp"
			android:layout_marginLeft="10dp"
			android:text="@string/addDescrizione" 
			android:focusable="false"
			android:focusableInTouchMode="false"
			android:contentDescription="@string/addDescrizione"
			android:background="@android:drawable/ic_input_add"/>
	    <TextView
	        android:id="@+id/addDescrizione_descrizione"
			android:layout_marginLeft="15dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/addDescrizione_descrizione" 
			android:textStyle="bold"
			android:focusable="false"
			android:focusableInTouchMode="false"
			/>
	</TableRow>
	
	<TableRow 
		android:id="@+id/widget003"
		android:paddingTop="7dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:orientation="horizontal">
	    
	    <ImageButton
	        android:id="@+id/modificaDescrizione"
	        android:layout_height="30dp"
	        android:layout_width="30dp"
			android:layout_marginLeft="10dp"
			android:text="@string/menu_modifica" 
			android:focusable="false"
			android:focusableInTouchMode="false"
			android:contentDescription="@string/menu_modifica"
			android:background="@android:drawable/ic_menu_edit"/>
	    <TextView
	        android:id="@+id/modificaDescrizione_descrizione"
			android:layout_marginLeft="15dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/modificaDescrizione_descrizione" 
			android:textStyle="bold"
			android:focusable="false"
			android:focusableInTouchMode="false"
			/>
	</TableRow>
	
	<TableRow
		android:id="@+id/widget004"
		android:paddingTop="7dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:orientation="horizontal">
	    
	    <ImageButton
	        android:id="@+id/deleteSpesa"
	        android:layout_height="30dp"
	        android:layout_width="30dp"
			android:layout_marginLeft="10dp"
			android:text="@string/deleteSpesa" 
			android:focusable="false"
			android:focusableInTouchMode="false"
			android:contentDescription="@string/deleteSpesa"
			android:background="@android:drawable/ic_menu_delete"/>
	    <TextView
	        android:id="@+id/deleteSpesa_descrizione"
			android:layout_marginLeft="15dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/deleteSpesa_descrizione" 
			android:textStyle="bold"
			android:focusable="false"
			android:focusableInTouchMode="false"
			/>
	</TableRow>
	
	<TableRow
		android:id="@+id/widget005"
		android:paddingTop="7dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:orientation="horizontal">
	    
	    <ImageButton
	        android:id="@+id/addSpesa"
	        android:layout_height="30dp"
	        android:layout_width="30dp"
			android:layout_marginLeft="10dp"
			android:text="@string/addSpesa" 
			android:focusable="false"
			android:focusableInTouchMode="false"
			android:contentDescription="@string/addSpesa"
			android:background="@android:drawable/ic_menu_add"/>
	    <TextView
	        android:id="@+id/addSpesa_descrizione"
			android:layout_marginLeft="15dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/addSpesa_descrizione" 
			android:textStyle="bold"
			android:focusable="false"
			android:focusableInTouchMode="false"
			/>
	</TableRow>
</LinearLayout>
