<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TextView_Pwd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/EditText_Pwd1"
        android:text="@string/settings_password"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/EditText_Pwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/enter_password_description"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/TextView_Pwd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/EditText_Pwd2"
        android:text="@string/settings_password2"
        android:contentDescription="@string/passwordVerifyDesc"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/EditText_Pwd2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/passwordVerifyDesc"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/TextView_PwdProblem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textIsSelectable="false"
        android:textStyle="bold" />
</LinearLayout>
