<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget1232"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:focusableInTouchMode="false">

    <TextView
        android:id="@+id/dataListaCustom"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="23"
        android:contentDescription="@string/display_selected_date"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:text=""
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/descrizioneListaCustom"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="52"
        android:contentDescription="@string/choose_expense_description_spinner"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text=""
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/simbolo"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="4"
        android:contentDescription="@string/euro_symbol"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:text="@string/currency"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/soldiListaCustom"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="16"
        android:contentDescription="@string/soldiSpesaDesc"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="end"
        android:text=""
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/simboloEuro"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="5"
        android:contentDescription="@string/euro_symbol"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:text="@string/currency"
        android:textIsSelectable="true" />
</TableRow>
