<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/widget00"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:orientation="vertical">
	
    <TextView
        	android:id="@+id/widget47"
			android:layout_height="0dp"
	    	android:layout_width="fill_parent"
			android:layout_weight="20"
			android:text="@string/PersoMy"
			android:textSize="17sp"
			android:gravity="center_vertical"/>
		
	<TextView
		    android:id="@+id/widget51"
			android:layout_height="0dp"
	    	android:layout_width="fill_parent"
			android:layout_weight="70"
		    android:text="@string/PersoMyHistory"
		    android:textSize="12sp"
		    android:gravity="center_vertical"/>
		
	<TextView
		    android:id="@+id/versionPersoMy"
			android:layout_height="0dp"
	    	android:layout_width="fill_parent"
			android:layout_weight="10"
			android:gravity="center|right"
		    android:text="@string/PersoMyVersion"
		    android:textSize="12sp" />
		
</LinearLayout>
