<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget32"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="8dp">

    <!-- Descrizione della Spesa -->
    <TextView
        android:id="@+id/descrizioneSpesaCustom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:contentDescription="@string/addSpesa_descrizione"
        android:ellipsize="end"
        android:padding="4dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <!-- Importo della Spesa -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="end|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/soldiSpesaCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/importoAutomaticaDesc"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/simboloEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/currency"
            android:gravity="center"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- Checkbox per Flag -->
    <CheckBox
        android:id="@+id/flaggataSpesaCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/flag_checkbox"
        android:gravity="center" />
</LinearLayout>